packages/ui-components/src/components/SideNavigationItem/sidenavigationitem.css
/*
 * SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Juno contributors
 * SPDX-License-Identifier: Apache-2.0
 */

.juno-sidenavigation-item {
  border-radius: 0.25rem;
  border-left: 0.25rem solid transparent;
  color: var(--color-sidenav-item-text-default);
}

.juno-sidenavigation-item:hover {
  color: var(--color-sidenav-item-text-hover);
}

.juno-sidenavigation-item:focus {
  outline: none;
  box-shadow: 0 0 0 2px var(--color-accent);
}

.juno-sidenavigation-item-selected {
  background-color: var(--color-sidenav-item-background-selected);
  border-left: 0.25rem solid var(--color-accent);
}

.level-1,
.level-2,
.level-3 {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  overflow: hidden;
  overflow-wrap: anywhere;
  text-align: left;
}

.level-1 {
  font-weight: bold;
}

.level-2 {
  margin-left: 1.75rem;
  font-weight: 500;
}

.level-3 {
  margin-left: 2.5rem;
  font-weight: 500;
}

